# flexed

./: CMakeLists.txt  README.md  analyze.sh  analyze_modules.sh  build.sh  build_debug.sh  build_modules.sh  build_release.sh  clean_build.sh  clean_build_release.sh  flexed.desktop  requierd.txt  run_debug.sh
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  build.sh  flexed_cmd_bar_view.cpp  flexed_cmd_bar_view.h  flexed_editor.cpp  flexed_editor.h  flexed_editor_window.cpp  flexed_editor_window.h  flexed_file_handler.h  flexed_global_text_buffer_container.cpp  flexed_global_text_buffer_container.h  flexed_mode.h  flexed_mode_loader.cpp  flexed_mode_loader.h  flexed_paned.cpp  flexed_paned.h  flexed_status_bar_view.cpp  flexed_status_bar_view.h  flexed_text_buffer.cpp  flexed_text_buffer.h  flexed_text_buffer_container.cpp  flexed_text_buffer_container.h  flexed_text_view.cpp  flexed_text_view.h  keyboard_handler.cpp  keyboard_handler.h  keyboard_map.cpp  keyboard_map.h  log.h  main.cpp  orderd_container.h  text_view.h
src/module/: CMakeLists.txt  c_mode_flexed.cpp  c_mode_flexed.h  create_new_mode.sh  mode_template.sh  remove_mode.sh  smart_parens_flexed.cpp
src/module/dired/: CMakeLists.txt  dired_flexed.cpp  dired_flexed.h
src/module/init/: CMakeLists.txt  init_flexed.cpp  init_flexed.h
src/module/settings/: CMakeLists.txt  settings_flexed.cpp  settings_flexed.h
src/module/smart_parens/: CMakeLists.txt  smart_parens_flexed.cpp  smart_parens_flexed.h
